--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <label> Picture View-</label>
       <div id="picture"></div>
 
-      <p style="font-size: 22px;">Object : <h4 id="Object"></h4> </p>
-      <p style="font-size: 22px;">Accuracy : <h4 id="Accuracy"></h4></p>
+      <p style="font-size: 22px;">Object : <span id="Object"></span> </p>
+      <p style="font-size: 22px;">Accuracy : <span id="Accuracy"></span></p>
     </center>
 
   </div>
